# mediaencodingtracker

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: app_state.py  auth.py  config.py  converter.py  database.py  main.py  models.py  scanner.py  scheduler.py  schemas.py  services.py  worker.py
app/routes/: events.py  files.py  jobs.py  settings.py  stats.py
app/static/: app.js  index.html
static/: app.js
tests/: conftest.py  test_api.py  test_scanner.py
