[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "media-encoding-tracker"
version = "0.1.0"
description = "Track and batch-convert media files via a web UI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "apscheduler>=3.10.4",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "python-multipart>=0.0.12",
    "anyio>=4.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pyright>=1.1.390",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Pyright – strict mode
# ---------------------------------------------------------------------------
[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false  # third-party stubs may be incomplete
reportUnknownMemberType = false  # SQLAlchemy dynamic attrs
reportUnknownVariableType = false

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B", "A", "C4", "PT", "RUF"]
ignore = ["B008"]  # FastAPI Depends() in defaults

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
